@@ -2,6 +2,8 @@ Revision history for Linux::Smaps::Tiny
 
 {{$NEXT}}
 
+    - Default to /proc/self/smaps, not /proc/$$/smaps
+
 0.01 2011-03-29 09:16:11
 
     - Initial buggy version
